# android-audio-high-performance

./: .gitignore  .gitmodules  CONTRIBUTING.md  README  README.md  RESOURCES.md  _config.yml  build.gradle  faqs.md  index.html  index.md  links.md  manifest.json  settings.gradle
HelloLowLatencyIO/: build.gradle
HelloLowLatencyIO/src/main/: AndroidManifest.xml
HelloLowLatencyIO/src/main/jni/: player.cpp  player.h
HelloLowLatencyIO/src/main/res/layout/: activity_main.xml
HelloLowLatencyIO/src/main/res/menu/: menu_main.xml
HelloLowLatencyIO/src/main/res/values/: strings.xml  styles.xml
HelloLowLatencyIO/src/main/res/values-w820dp/: dimens.xml
HelloLowLatencyOutput/: gradlew  settings.gradle
HelloLowLatencyOutput/app/: build.gradle
HelloLowLatencyOutput/app/src/main/: AndroidManifest.xml
HelloLowLatencyOutput/app/src/main/jni/: player.c
HelloLowLatencyOutput/gradle/wrapper/: gradle-wrapper.properties
HelloLowLatencyOutput/howie/: build.gradle  proguard-rules.pro
HelloLowLatencyOutput/howie/src/main/jni/: howie.h
HelloLowLatencyOutput/howie/src/main/jni/private/: EngineImpl.h  howie-private.h  slutils.h
HelloLowLatencyOutput/howie/src/main/res/values/: strings.xml
HelloLowLatencyOutput/src/main/: AndroidManifest.xml
HelloLowLatencyOutput/src/main/jni/: player.c
HelloLowLatencyOutput/src/main/res/layout/: activity_main.xml
HelloLowLatencyOutput/src/main/res/values/: strings.xml
SimpleSynth/: README.md  build.gradle
SimpleSynth/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
SimpleSynth/app/src/main/: AndroidManifest.xml
SimpleSynth/app/src/main/cpp/: OpenSLES_Android_API24.h  android_log.h  audio_common.cc  audio_common.h  audio_player.cc  audio_player.h  audio_renderer.h  cpu_relax.h  jni_bridge.cc  load_stabilizer.cc  load_stabilizer.h  synthesizer.cc  synthesizer.h  trace.cc  trace.h
SimpleSynth/app/src/main/java/com/example/simplesynth/: MainActivity.java
SimpleSynth/app/src/main/res/layout/: activity_main.xml
SimpleSynth/app/src/main/res/values/: strings.xml
SimpleSynth/gradle/wrapper/: gradle-wrapper.properties
_includes/: footer.html  head.html  header.html
_layouts/: default.html  home.html
_sass/: _config.scss  _layout.scss  _mdl.scss
aaudio/: README.md  build.gradle  gradle.properties  settings.gradle
aaudio/.google/: packaging.yaml
aaudio/aaudio_common/: build.gradle
aaudio/aaudio_common/src/main/: AndroidManifest.xml
aaudio/aaudio_common/src/main/res/values/: strings.xml
aaudio/common/: audio_common.cc  audio_common.h
aaudio/echo/: build.gradle
aaudio/echo/src/main/: AndroidManifest.xml
aaudio/echo/src/main/cpp/: AudioEffect.cpp  CMakeLists.txt  EchoAudioEngine.cpp  EchoAudioEngine.h  android_debug.h  audio_common.cpp  audio_common.h  audio_effect.cc  audio_effect.h  audio_engine.cc  audio_engine.h  audio_main.cpp  echo_audio_engine.cc  echo_audio_engine.h  jni_bridge.cc  jni_bridge.cpp  stream_builder.h
aaudio/echo/src/main/res/layout/: activity_main.xml  audio_devices.xml
aaudio/echo/src/main/res/values/: strings.xml
aaudio/gradle/wrapper/: gradle-wrapper.properties
aaudio/hello-aaudio/: build.gradle
aaudio/hello-aaudio/src/main/: AndroidManifest.xml
aaudio/hello-aaudio/src/main/cpp/: CMakeLists.txt  PlayAudioEngine.cpp  PlayAudioEngine.h  SineGenerator.h  android_debug.h  audio_engine.cc  audio_engine.h  audio_main.cpp  debug_utils.cpp  debug_utils.h  jni_bridge.cc  jni_bridge.cpp  play_audio_engine.cc  play_audio_engine.h  stream_builder.h
aaudio/hello-aaudio/src/main/res/layout/: activity_main.xml
aaudio/hello-aaudio/src/main/res/values/: strings.xml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/jni/: Android.mk  player.c  tone.c
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
audio-device/: build.gradle
css/: main.scss
faqs/: audio_files.html  compatibility.html  daw.html  decoding.html  high_resolution.html  index.md  latency.md  middleware.html  midi.html  pro_audio_hardware_flag.md
gradle/wrapper/: gradle-wrapper.properties
guides/: audio-input-latency.html  audio-input-latency.md  audio-output-latency.md  floating_point.html  index.md  opensl_es.html  opensl_es.md  sample-rates.html
howie/: build.gradle
howie/src/main/: AndroidManifest.xml
howie/src/main/jni/: howie.h
howie/src/main/jni/private/: CMakeLists.txt  EngineImpl.cpp  EngineImpl.h  ParameterPipe.cpp  ParameterPipe.h  Ringbuffer.h  Sempahore.cpp  Sempahore.h  StreamImpl.cpp  StreamImpl.h  WaitFreeRingbuffer.h  Worker.cpp  Worker.h  howie-private.h  howie_jni.h  slutils.cpp  slutils.h  unique_buffer.cpp  unique_buffer.h
howie/src/main/res/values/: strings.xml
oboe/: README.md  TODO  build.gradle  settings.gradle
oboe/gradle/wrapper/: gradle-wrapper.properties
oboe/hello-oboe/: CMakeLists.txt  build.gradle
oboe/hello-oboe/src/main/cpp/: PlayAudioEngine.cpp  PlayAudioEngine.h  jni_bridge.cpp
oboe/hello-oboe/src/main/java/com/google/sample/oboe/hellooboe/: MainActivity.java  PlaybackEngine.java
oboe/hello-oboe/src/main/res/layout/: activity_main.xml
oboe/hello-oboe/src/main/res/values/: strings.xml
resources/: floating_point.html  index.md  midi_tested.html  miscellaneous.html
samples/HelloLowLatencyIO/: build.gradle
samples/HelloLowLatencyIO/src/main/: AndroidManifest.xml
samples/HelloLowLatencyIO/src/main/jni/: CMakeLists.txt  player.cpp
samples/HelloLowLatencyIO/src/main/res/layout/: activity_main.xml
samples/HelloLowLatencyIO/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
samples/HelloLowLatencyIO/src/main/res/values-v21/: styles.xml
samples/HelloLowLatencyOutput/: README  build.gradle
samples/HelloLowLatencyOutput/src/main/jni/: CMakeLists.txt  player.c
samples/HelloLowLatencyOutput/src/main/res/layout/: activity_main.xml
samples/audio-echo/: README.md  build.gradle  settings.gradle
samples/audio-echo/app/: build.gradle
samples/audio-echo/app/src/main/: AndroidManifest.xml
samples/audio-echo/gradle/wrapper/: gradle-wrapper.properties
(+43 files in other folders)
